--- a/cea/default.config
+++ b/cea/default.config
@@ -1900,9 +1900,9 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 [plots-solar]
 
-y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot = total, roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.choices = total, roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: electricity yield and/or heat yield, if any.
 
 y-metric-unit = kWh
