Add Pixi environment support and config
Introduces Pixi environment management and adding Pixi lock file. Updates pyproject.toml to support Pixi-based workflows.

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@ setup/CityEnergyAnalyst-GUI-win32-x64/*
 setup/Dependencies/cityenergyanalyst.tar.gz
 
 *.local
+# pixi environments
+.pixi/*
+!.pixi/config.toml
