--- a/cea/default.config
+++ b/cea/default.config
@@ -1787,7 +1787,7 @@ plot-title.type = StringParameter
 plot-title.nullable = true
 plot-title.help = Customise the plot title.
 
-plot-type = bar_plot_grouped
+plot-type = bar_plot_stack
 plot-type.type = ChoiceParameter
 plot-type.choices = bar_plot_group, bar_plot_stack, bar_plot_stack_percentage
 plot-type.help = Select the type of plot.
@@ -1906,7 +1906,7 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 [plots-solar]
 
-y-metric-to-plot = total, roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = total, roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: electricity yield and/or heat yield, if any.
