Add py4design as a dependency
Added py4design from a specific git commit to the dependencies in pyproject.toml and pixi.lock. This enables usage of py4design and its required packages in the project environment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dependencies = [
     "utm",
     "xlrd",
     "xlwt",
-    "wntr"
+    "wntr",
+    "py4design @ git+https://github.com/reyery/py4design.git@07e68e7?rev_type=rev"
 ]
 
 [project.optional-dependencies]
