--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ channels = ["conda-forge"]
 platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 
 [tool.pixi.tasks]
+cea = "cea"
 dashboard = "cea dashboard"
 test = "cea test --type integration"
 
