Avoid deprecation warnings due to py4design
Updated package versions and environment specifications in pyproject.toml and pixi.lock to reflect new dependency requirements and compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ osmnx = "*"
 networkx = "*"
 psutil = "*"
 pvlib = "*"
-pythonocc-core = "*"
+pythonocc-core = "==7.7.0"  # pinned to 7.7.0 due to compatibility issues with py4design (Avoid deprecation warnings)
 pyyaml = "*"
 scikit-learn = "*"
 scipy = "*"
