Update networkx version requirement to >=3.4
Bumped the networkx dependency to version >=3.4 in pyproject.toml and updated corresponding package references in pixi.lock. Also reverted osmnx to version 1.9.3 for compatibility with the new networkx version.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ libpysal = "*"
 numba = "*"
 numpy = "*"
 osmnx = "*"
-networkx = "*"
+networkx = ">=3.4"
 psutil = "*"
 pvlib = "*"
 pythonocc-core = "==7.7.0"  # pinned to 7.7.0 due to compatibility issues with py4design (Avoid deprecation warnings)
