Rename dashboard task to server in Pixi config
The Pixi task previously named 'dashboard' is now called 'server' to better reflect its purpose of running the CEA dashboard.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 
 [tool.pixi.tasks]
 cea = "cea"
-dashboard = "cea dashboard"
+server = "cea dashboard"
 test = "cea test --type integration"
 
 [tool.pixi.dependencies]
