--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,19 +21,19 @@ dependencies = [
     "uvicorn",
     "jinja2",
     "python-socketio",
-    "python-multipart",
+    "python-multipart", # Required by fastapi for file uploads
     "sqlalchemy[asyncio]",
-    "sqlmodel",
-    "asyncpg",
-    "aiosqlite",
-    "pyjwt[crypto]",
+    "sqlmodel", # Required by fastapi for database models
+    "asyncpg", # Required by sqlmodel for postgres
+    "aiosqlite", # Required for async sqlite adapter
+    "pyjwt[crypto]", # Required by fastapi for JWT authentication
 
     # Other python dependencies
     "deap",
     "ephem",
     "numpy-financial",
     "python-louvain",
-    "pytz",
+    "pytz", # Not required from 3.9
     "salib",
     "timezonefinder",
     "openpyxl",
@@ -41,8 +41,9 @@ dependencies = [
     "utm",
     "xlrd",
     "xlwt",
-    "wntr>=1.3.2,<2",
+    "wntr>=1.3.2,<2", # Needs to be installed via pip since conda-forge does not provide osx-arm64 builds
 
+    # modified p4design to remove deprecated functions
     "py4design @ git+https://github.com/reyery/py4design.git@08326122ee496afbf762527365d88415f4b570f5?rev_type=rev",
 ]
 
