--- a/.github/workflows/pull.request.yml
+++ b/.github/workflows/pull.request.yml
@@ -5,6 +5,10 @@ on:
     types: [opened, synchronize, ready_for_review]
     branches: [master, release-**]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   check_environment_yml:
     runs-on: ubuntu-latest
