--- a/.github/workflows/pull.request.yml
+++ b/.github/workflows/pull.request.yml
@@ -46,8 +46,8 @@ jobs:
             })
             core.setFailed('conda-lock.yml needs to be updated')
 
-  unit_tests:
-    name: Unit Tests - ${{ matrix.os }}
+  tests:
+    name: Tests - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: check_environment_yml
     strategy:
@@ -57,44 +57,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Conda environment with Micromamba
-        uses: mamba-org/setup-micromamba@v2
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.14
         with:
-          environment-file: conda-lock.yml
-          environment-name: cea
-          cache-environment: true
+          cache: true
 
       - name: Install CEA
-        shell: bash -l {0}
-        run: pip install .
+        run: pixi run pip install .
 
       - name: Run unit tests
-        shell: bash -l {0}
-        run: cea test --type unittest
-
-  integration_tests:
-    if: github.event.pull_request.draft == false
-    name: Integration Tests - ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    needs: check_environment_yml
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Conda environment with Micromamba
-        uses: mamba-org/setup-micromamba@v2
-        with:
-          environment-file: conda-lock.yml
-          environment-name: cea
-          cache-environment: true
-
-      - name: Install CEA
-        shell: bash -l {0}
-        run: pip install .
+        run: pixi run cea test --type unittest
 
       - name: Run integration tests
-        shell: bash -l {0}
-        run: cea test --type integration
+        if: github.event.pull_request.draft == false
+        run: pixi run cea test --type integration
