Add permissions to pull request workflow
Sets 'contents: read' at the workflow level and 'pull-requests: write' for the check_environment_yml job to ensure proper access for workflow actions.

--- a/.github/workflows/pull.request.yml
+++ b/.github/workflows/pull.request.yml
@@ -9,9 +9,14 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   check_environment_yml:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
         with:
