Ignore ambiguous variable name lint error in Ruff
Added 'E741' to the Ruff lint ignore list in pyproject.toml to suppress warnings about ambiguous variable names (l, O, I).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,9 @@ version = { attr = "cea.__version__" }
 
 [tool.ruff]
 exclude = ["*.ipynb"]
+lint.ignore = [
+    "E741", # ambiguous variable name (l, O, I)
+]
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
