Improve concurrency group fallback in CI workflow
Updates the concurrency group in the CI workflow to use github.head_ref for pull requests and fall back to github.ref for pushes, ensuring proper grouping and cancellation behavior.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,8 @@ on:
     paths: ['cea/**', 'pyproject.toml', 'pixi.lock']
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref }}
+  # Use head_ref for PRs, fall back to ref for pushes
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
 permissions:
