--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,11 @@ lint.ignore = [
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
+platforms = [
+    "linux-64", "linux-aarch64",
+    "osx-64", "osx-arm64",
+    "win-64"
+]
 
 [tool.pixi.tasks]
 cea = "cea"
