Update concurrency cancellation in CI workflow
Adjusts the concurrency group to only cancel in-progress jobs for pull requests, not for pushes to master. This prevents interruption of master branch CI jobs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ on:
 concurrency:
   # Use head_ref for PRs, fall back to ref for pushes
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
-  cancel-in-progress: true
+  # Only cancel in-progress jobs for PRs, not for pushes to master
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 permissions:
   contents: read
