--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,24 @@ maintainers = [
 dynamic = ["version"]
 
 dependencies = [
+    # Scientific/geospatial packages (optimized conda builds available in conda-forge)
+    # Duplicated below in [tool.pixi.dependencies] to fetch from conda-forge using pixi - update both when needed
+    "numpy<2", # held back by wntr
+    "scipy",
+    "matplotlib",
+    "geopandas",
+    "shapely",
+    "networkx>=3.4", # 3.4 contains a fix for steiner tree algorithm
+    "scikit-learn",
+    "numba",
+    "pyyaml",
+    "psutil",
+    "pyarrow",
+    "libpysal",
+    "osmnx",
+    "pvlib",
+    "pythonocc-core",
+
     # Backend dependencies
     "aiofiles",
     "aiocache[redis]",
@@ -95,25 +113,31 @@ server = "cea dashboard"
 test = "cea test --type integration"
 
 [tool.pixi.dependencies]
+# Scientific/geospatial packages (also in main dependencies - conda builds preferred)
+# Duplicate of above in [project.dependencies] - update both when needed
+numpy = "<2" # held back by wntr
+scipy = "*"
+matplotlib = "*"
+geopandas = "*"
+shapely = "*"
+networkx = ">=3.4" # 3.4 contains a fix for steiner tree algorithm
+scikit-learn = "*"
+numba = "*"
+pyyaml = "*"
+psutil = "*"
+pyarrow = "*"
+libpysal = "*"
+osmnx = "*"
+pvlib = "*"
+pythonocc-core = "*"
+
+# System dependencies with native libraries (fetch from conda-forge)
 cvxopt = "*" # For wntr
 fiona = "*"
 gdal = "*"
-geopandas = "*"
-libpysal = "*"
-numba = "*"
-numpy = "<2" # held back by wntr
-osmnx = "*"
-networkx = ">=3.4" # 3.4 contains a fix for steiner tree algorithm
-psutil = "*"
-pvlib = "*"
-pythonocc-core = "*"
-pyyaml = "*"
-scikit-learn = "*"
-scipy = "*"
-shapely = "*"
-matplotlib = "*"
+
+# Development tools (pixi-only)
 notebook = "*"
-pyarrow = "*"
 pixi-pycharm = ">=0.0.8,<0.0.9" # for pycharm support
 
 [tool.pixi.pypi-dependencies]
