Remove pythonocc-core from dependencies
pythonocc-core is not available in pypi, installing it using just pip will cause an error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "libpysal",
     "osmnx",
     "pvlib",
-    "pythonocc-core",
+    # Does not exist in pypi
+    # "pythonocc-core",
 
     # Backend dependencies
     "aiofiles",
