Move optional dependencies to group
Reorganized optional dependencies into groups for lint, test, and docs. Updated the dev group to include these groups, and added sphinx to the docs group for improved documentation support.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,8 +68,11 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "ruff"]
-docs = ["setuptools"]
+[dependency-groups]
+lint = ["ruff"]
+test = ["pytest"]
+docs = ["setuptools", "sphinx"]
+dev = [{include-group = "test"}, {include-group = "lint"}, {include-group = "docs"}]
 
 [project.urls]
 "Homepage" = "https://cityenergyanalyst.com"
