--- a/cea/default.config
+++ b/cea/default.config
@@ -1898,11 +1898,10 @@ y-metric-unit.choices = MWh, kWh, Wh
 y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
 y-metric-unit.category = Y-axis settings
 
-y-normalised-by = gross_floor_area,
+y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
-
 
 [plots-solar]
 
