--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,7 @@ dependencies = [
     "xlrd",
     "xlwt",
     "wntr>=1.3.2,<2", # Needs to be installed via pip since conda-forge does not provide osx-arm64 builds
-
-    # modified p4design to remove deprecated functions
-    "py4design @ git+https://github.com/reyery/py4design.git@08326122ee496afbf762527365d88415f4b570f5",
+    "py4design-cea"
 ]
 
 [project.optional-dependencies]
