update interface to show a construction mapping helper

--- a/cea/default.config
+++ b/cea/default.config
@@ -113,6 +113,44 @@ fix-overlapping-geometries = true
 fix-overlapping-geometries.type = BooleanParameter
 fix-overlapping-geometries.help = Tries to eliminate overlapping building volumes (and subsequent double counting) by fixing overlaps of ground-surface polygons and retaining only the tallest of the overlapping buildings.
 
+[construction-helper]
+construction-prefix = new_construction
+construction-prefix.type = StringParameter
+construction-prefix.help = Name of the overarching construction to be created. This will be used as a prefix 
+    for the names of the new constructions created by this tool, including roof, wall, floor, and window constructions.
+construction-prefix.nullable = true
+
+database-region = Switzerland
+database-region.type = ChoiceParameter
+database-region.choices = Switzerland, Germany, Singapore
+database-region.help = Type of construction database to use. If your country is not listed, 
+    please select the closest one. 
+
+building-structure-type = concrete
+building-structure-type.type = ChoiceParameter
+building-structure-type.choices = concrete, steel, wood, masonry
+building-structure-type.help = Type of building structure to use for the new constructions. 
+    A realistic estimation of the material emission will be made based on the building structure type and the country selected above.
+
+insulation-type = EPS
+insulation-type.type = ChoiceParameter
+insulation-type.choices = EPS, XPS, PUR, rock wool, glass wool, hemp
+insulation-type.help = Type of insulation to use for the new constructions. 
+    Together with the insulation thickness, a realistic estimation of the material emission will be made.
+
+insulation-thickness = medium (around 10 cm)
+insulation-thickness.type = ChoiceParameter
+insulation-thickness.choices = thick (around 20 cm), medium (around 10 cm), thin (around 5 cm), none
+insulation-thickness.help = Thickness of the insulation to use for the new constructions. 
+    Together with the insulation type, a realistic estimation of the material emission will be made.
+
+cladding-type = plaster
+cladding-type.type = ChoiceParameter
+cladding-type.choices = plaster, aluminium, steel, glass, stone, brick, wood, none
+cladding-type.help = Type of cladding to use for the new constructions. 
+    Note that the cladding type is different from the building structure type. For example, a concrete building can have 
+    a brick cladding. if the cladding type is set to "none", the new constructions will not have a cladding.
+
 [trees-helper]
 trees =
 trees.type = FileParameter
