--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -392,6 +392,20 @@ Data Management:
       - [ get_zone_geometry ]
       - [ get_terrain ]
 
+  - name: construction-helper
+    label: Construction Helper
+    short_description: generate building construction properties from simple assumptions
+    description: |
+      This feature makes educated assumptions about building construction properties based on a few simple questions.
+      It is useful when the user find the already-existing construction types in the database not suitable for their needs.
+      After running this feature, one new type of construction for window, wall, roof and floor will be created in the scenario's Database.
+      The emission values of the new construction types will be calculated based on the regional material databases. 
+    interfaces: [cli, dashboard]
+    module: cea.datamanagement.construction_helper
+    parameters: ['general:scenario', construction-helper]
+    input-files:
+      - [get_zone_geometry]
+
 
 Utilities:
 
