Refactor external build config and modularize Daysim/CRAX
Split Daysim and CRAX configuration, build, and install logic into separate CMake modules (DaysimConfig.cmake and CraxConfig.cmake). Updated external/CMakeLists.txt to use these modules, add build options for each component, and improve build summary output. This modularization improves maintainability and clarity of the external tools build process.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,12 +98,12 @@ input = "cea/__init__.py"
 # Scikit-build-core configuration
 [tool.scikit-build]
 # Only install the cea_targets component (manually defined in our CMakeLists.txt)
-install.components = ["cea_targets"]
+install.components = ["cea_targets", "crax_targets"]
 wheel.packages = ["cea"]
 
 [tool.scikit-build.build]
 # Only build the cea_targets target, not all targets (avoids unwanted programs)
-targets = ["cea_targets"]
+#targets = ["cea_targets"]
 # Use 4 cores for parallel building
 tool-args = ["-j4"]
 # Verbose output for debugging
