--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,7 +103,7 @@ wheel.packages = ["cea"]
 
 [tool.scikit-build.build]
 # Only build the cea_targets target, not all targets (avoids unwanted programs)
-#targets = ["cea_targets"]
+targets = ["cea_all"]
 # Use 4 cores for parallel building
 tool-args = ["-j4"]
 # Verbose output for debugging
