--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ wheel.packages = ["cea"]
 # Only build the cea_targets target, not all targets (avoids unwanted programs)
 targets = ["cea_all"]
 # Use 4 cores for parallel building
-tool-args = ["-j4"]
+tool-args = ["-j", "4"]
 # Verbose output for debugging
 verbose = true
 
