Update build and dev setup configuration
Removed explicit parallel build tool-args in scikit-build config and set CMAKE_BUILD_PARALLEL_LEVEL in the setup-dev command. Also added the -v flag to pip install for verbose output during development setup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,8 +104,6 @@ wheel.packages = ["cea"]
 [tool.scikit-build.build]
 # Only build the cea_targets target, not all targets (avoids unwanted programs)
 targets = ["cea_all"]
-# Use 4 cores for parallel building
-tool-args = ["-j", "4"]
 # Verbose output for debugging
 verbose = true
 
@@ -136,7 +134,7 @@ test = "cea test --type integration"
 
 # Development tasks
 lint = {cmd = "ruff check --fix ."}
-setup-dev = {cmd = "uv pip install -e . --group dev --no-build-isolation"}
+setup-dev = {cmd = "CMAKE_BUILD_PARALLEL_LEVEL=4 uv pip install -ve . --group dev --no-build-isolation"}
 build-wheel = {cmd = "uv build"}
 
 [tool.pixi.dependencies]
