--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,8 +64,10 @@ dependencies = [
     "wntr>=1.3.2,<2", # Needs to be installed via pip since conda-forge does not provide osx-arm64 builds
     "py4design-cea",
 
+    # TODO: Maybe move to dependency groups
     # For building
     "scikit-build-core>=0.11.0",
+    "cmake>=3.15"
 ]
 
 [dependency-groups]
